...
}

internal val PasswordHistoryPageMode.isVisible: Boolean
    get() = this != PasswordHistoryPageMode.NONE

internal val passwordPageContentTypeSetSaver = Saver<Set<PasswordPageContentType>, ArrayList<String>>(
    save = { selectedTypes ->
        ArrayList(selectedTypes.map(PasswordPageContentType::name))
    },
    restore = { savedNames ->
        savedNames
            .mapNotNull { name -> PasswordPageContentType.entries.find { it.name == name } }
            .toSet()
...
